--- a/website/css/style.css
+++ b/website/css/style.css
@@ -12,6 +12,7 @@ img {
 
 header {
 	padding-top: 25px;
+	padding-bottom: 25px;
 }
 
 .row {
@@ -35,35 +36,80 @@ header {
 	margin-left: 135px;
 }
 
-.header-number {
+.header-number-1 {
 	font-size: 24px;
 	font-weight: 400;
 	color: #de780a;
 	margin-top: 0;
 	margin-left: 135px;
+	text-decoration: none;
+	width: 100%;
 }
 
-
-.wrapper {
-  display: table-cell;
-  vertical-align: middle; 
+.header-number-2 {
+	font-size: 24px;
+	font-weight: 400;
+	color: #de780a;
+	margin-top: 0;
+	text-decoration: none;
+	width: 100%;
 }
 
 .main {
-  position: absolute;
-  display: table;
-  width: 100%;
-  color: #fff;
-  height: 600px;
-  background: #000 url(../img/main.png) center center no-repeat;
-  background-size: cover;
+	background-image: url(../img/main.png);
+	background-size: cover;
+	height: 600px;
 }
 
-.main-overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.43);
-  z-index: 1; 
+.main-title {
+	font-size: 36px;
+	font-weight: 700;
+	line-height: 48px;
+	color: #fff;
+	text-transform: uppercase;
 }
 
+.main-table {
+	height: 182px;
+	border: 3px solid #fff;
+}
+
+.product {
+	
+	margin-top: 50px;
+}
+
+.product-title {
+	overflow: hidden;
+	text-align: center;
+}
+
+.product-title span {
+	font-size: 24px;
+	font-weight: 700;
+	color: #20254f;
+	display: inline-block;
+    vertical-align: middle;
+    text-transform: uppercase;
+}
+
+.product-title:before,
+.product-title:after {
+	content: " ";
+	display: inline-block;
+    vertical-align: middle;
+    width: 100%;
+    height: 3px;
+    background-color: #20254f;
+    position: relative;
+}
+
+.product-title:before {
+	margin-left: -100%;
+	left: -14px;
+}
+
+.product-title:after {
+	margin-right: -100%;
+	right: -14px;
+}
