--- a/website/css/style.css
+++ b/website/css/style.css
@@ -2,8 +2,6 @@ body {
 	margin: 0;
 	font-family: 'Roboto';
 	background-color: #fff;
-	width: 1434px;
-	height: 1833px;
 }
 
 img {
@@ -15,9 +13,6 @@ header {
 	padding-bottom: 25px;
 }
 
-.row {
-	width: 1434px;
-}
 
 .header-email {
 	font-size: 18px;
@@ -82,6 +77,7 @@ header {
 .product-title {
 	overflow: hidden;
 	text-align: center;
+	margin-bottom: 30px;
 }
 
 .product-title span {
@@ -112,4 +108,27 @@ header {
 .product-title:after {
 	margin-right: -100%;
 	right: -14px;
+}
+
+.products-title {
+	text-align: center;  
+	font-size: 15px;
+	font-weight: 400;
+	color: #20254f;
+	text-decoration: underline;
+}
+
+.products-description {
+	font-size: 12px;
+	font-weight: 500;
+	line-height: 16px;
+	color: #585858;
+}
+
+.products-description-2 {
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 16px;
+	color: #585858;
+	padding-top: 18px;
 }
